--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,8 @@ dependencies = [
     "pydantic>=2.12.5",
     "sqlalchemy>=2.0.45",
     "uvicorn>=0.38.0",
+    "google-auth>=2.22.0",
+    "python-jose[cryptography]>=3.3.0",
+    "python-multipart>=0.0.9",
+    "requests>=2.31.0",
 ]
