--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-fastapi>=0.125.0
-pydantic>=2.12.5
-sqlalchemy>=2.0.45
-uvicorn>=0.38.0
-google-auth>=2.22.0
-python-jose[cryptography]>=3.3.0
-python-multipart>=0.0.9
-requests>=2.31.0
-psycopg2-binary>=2.9.9
-pydantic-core==2.41.5
+fastapi==0.109.0
+pydantic==2.6.0
+sqlalchemy
+uvicorn
+google-auth
+python-jose[cryptography]
+python-multipart
+requests
+psycopg2-binary
