--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "fastapi>=0.125.0",
-    "pydantic>=2.12.5",
+    "fastapi==0.115.6",
+    "pydantic==2.10.6",
     "sqlalchemy>=2.0.45",
     "uvicorn>=0.38.0",
     "google-auth>=2.22.0",
