--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi
-pydantic
+fastapi==0.115.6
+pydantic==2.10.6
 sqlalchemy
 uvicorn
 google-auth
@@ -7,3 +7,4 @@ python-jose[cryptography]
 python-multipart
 requests
 psycopg2-binary
+pydantic-core==2.27.2
