--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "python-multipart>=0.0.9",
     "requests>=2.31.0",
     "psycopg2-binary>=2.9.9",
+    "python-dotenv>=1.2.1",
 ]
