--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
 	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
-		"build": "vite build"
+		"build": "vite build",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:app": "vitest run tests/app.test.js",
+		"test:ui": "vitest run tests/ui.test.js"
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.23.0",
@@ -17,8 +21,8 @@
 		"@codemirror/state": "^6.4.0",
 		"@codemirror/view": "^6.23.0",
 		"@replit/codemirror-vscode-keymap": "^6.0.2",
-		"@uiw/codemirror-theme-github": "^4.23.0",
 		"@uiw/codemirror-theme-dracula": "^4.23.0",
+		"@uiw/codemirror-theme-github": "^4.23.0",
 		"@uiw/codemirror-theme-nord": "^4.23.0",
 		"crypto-js": "^4.2.0",
 		"highlight.js": "^11.9.0",
@@ -31,6 +35,9 @@
 		"vue": "^3.4.0"
 	},
 	"devDependencies": {
-		"vite": "^5.0.0"
+		"@vue/test-utils": "^2.4.6",
+		"jsdom": "^28.0.0",
+		"vite": "^7.3.1",
+		"vitest": "^4.0.18"
 	}
 }
